2001-03-05  Simon Perkins  <simes@genie.lanl.gov>

	* Added FITS format support and documentation.

2001-03-01  Frank Warmerdam  <warmerdam@pobox.com>

	* Added --ogr-enabled, --formats and --version options for gdal-config.
	Also, added VERSION file in gdal root directory, and update of it
	by mkgdaldist.sh.

2001-02-28  Frank Warmerdam  <warmerdam@pobox.com>

	* Fixed up handling of pyexecdir.

2001-02-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added Envisat format support.

2001-02-19  Frank Warmerdam  <warmerdam@pobox.com>

	* aclocal.m4: fixed mixup between pyexecdir and pythonexecdir, thanks
	to Bernhard Reiter.

	* apps/gdal_translate.c: fixed georeferenced calculation for
	-srcwin subwindowing.

2001-02-15  Frank Warmerdam  <warmerdam@pobox.com>

	* port/cpl_error.cpp: Fixed initialization of fpLog.  Log was
	being reset to stderr on second call to CPLDefaultErrorHandler.

2001-02-08  Frank Warmerdam  <warmerdam@pobox.com>

	* frmts/gif/{e,d}gif_lib.c: Fixed to use binary mode if O_BINARY
	is defined rather than based on __MSDOS__.

2001-02-06  Frank Warmerdam  <warmerdam@pobox.com>

	* Export various OGR classes, and entry points from DLL.

	* Fixed numpydataset.cpp to use sscanf() to parse pointer.

2001-02-05  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for R*4 (Float32) images in SAR_CEOS reader.

2001-01-30  Frank Warmerdam  <warmerdam@pobox.com>

	* core/overview.cpp: Added resampling type of AVERAGE_MP to do
	magnitude preserving averaging.  New functions include
	GDALComputeBandStats() to get mean and standard deviation.

2001-01-26  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogr_srs_esri.cpp: added Transverse Mercator .prj support.

2001-01-24  Frank Warmerdam  <warmerdam@pobox.com>

	* Added support for files with scanlines split across records in the
	ceos2 (SAR_CEOS) reader.

2001-01-22  Frank Warmerdam  <warmerdam@pobox.com>

	* Added alg directory, and GDALComputeMedianCutPCT(), and
	GDALDitherRGB2PCT() functions.
